--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -195,7 +195,7 @@ i.nav-arrow:before {
 		-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
 		-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
 		box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
-		border-top: 1px solid #eeeeee;
+		border-top: 1px solid $top-search-top-border-color;
 		input[type=text] {
 			border: 1px solid $top-search-input-border-color;
 			font-size: 15px;
@@ -260,7 +260,7 @@ i.nav-arrow:before {
 			padding: 0 10px 0 15px;
 		}
 		.autocomplete-selected {
-			background: #F0F0F0;
+			background: $autocomplete-selected-bg;
 		}
 
 		/*End of TODO*/
@@ -293,9 +293,6 @@ i.nav-arrow:before {
 			}
 		}
 		&.tier2 {
-			> li i.menu-indicator {
-				color: #aaa;
-			}
 			li.open {
 				overflow: visible;
 			}
@@ -344,7 +341,7 @@ i.menu-indicator {
 
 #signin-container { //LI
 	.dropdown-menu {
-		border: 1px solid #eeeeee !important;
+		border: 1px solid $top-user-dropdown-border-color !important;
 		border-bottom: none !important;
 		background: $top-user-dropdown-bg;
 		margin-top: 0;
@@ -626,7 +623,7 @@ i.menu-indicator {
 				border-bottom: 1px solid $footer-li-xs-border-bottom-color;
 				&.open {
 					border-bottom: none;
-					background: #eeeeee;
+					background: $footer-li-xs-open-bg;
 					> ul {
 						border-bottom: 1px solid $footer-xs-border-top-color;
 					}
@@ -687,14 +684,14 @@ i.menu-indicator {
 			}
 			a.navbar-toggle {
 				&:hover {
-					color: #333333;
+					color: $top-link;
 				}
 			}
 		}
 		.main-nav-section {
 			a {
 				&:hover {
-					color: #333333;
+					color: $top-link;
 				}
 			}
 		}
@@ -702,16 +699,16 @@ i.menu-indicator {
 			&.tier1 {
 				li {
 					position: relative;
-					border-bottom: 1px solid #aaa;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t1;
 					i.glyphicon {
 						margin-right: 15px;
 					}
 					&.open {
 						> a {
-							background: #eeeeee;
-							color: #333333;
+							background: $nav-xs-bg-open-t1;
+							color: $nav-xs-color-open-t1;
 							i {
-								color: #fb4f14;
+								color: $nav-xs-arrow-color-open-t1;
 								&:before {
 									content: "\e253";
 								}
@@ -725,7 +722,7 @@ i.menu-indicator {
 					width: 85%;
 				}
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t2 !important;
 				}
 				> li.open {
 					border-bottom: none !important;
@@ -743,13 +740,13 @@ i.menu-indicator {
 			&.tier3 {
 				height: auto !important;
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t3 !important;
 				}
 			}
 			&.tier4 {
-				border-left: 3px solid #FB4F14;
+				border-left: 3px solid $nav-xs-border-left-color-t4;
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t4 !important;
 				}
 			}
 		}
@@ -964,7 +961,7 @@ i.menu-indicator {
 	}
 	#footer {
 		padding-top: 20px;
-		border-top: 1px solid #aaa;
+		border-top: 1px solid $footer-top-border-color;
 		.menu-container {
 			margin: 0 auto;
 		}
@@ -973,13 +970,13 @@ i.menu-indicator {
 		}
 		.footer-top-section {
 			margin-bottom: 10px;
-			background-color: #ffffff;
+			background-color: $footer-bg-color;
 			> ul {
-				border-bottom: 1px solid #eee;
+				border-bottom: 1px solid $footer-cpy-border-color;
 			}
 			ul.menu-links {
 				padding: 0 15px 20px;
-				color: #333;
+				color: $footer-link-color;
 
 				li {
 					border-bottom: 0;
@@ -1058,14 +1055,14 @@ i.menu-indicator {
 			width: auto;
 			a.navbar-toggle {
 				&:hover {
-					color: #333333;
+					color: $top-link;
 				}
 			}
 		}
 		.main-nav-section {
 			a {
 				&:hover {
-					color: #333333;
+					color: $top-link;
 				}
 			}
 		}
@@ -1073,16 +1070,16 @@ i.menu-indicator {
 			&.tier1 {
 				li {
 					position: relative;
-					border-bottom: 1px solid #aaa;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t1;
 					i.glyphicon {
 						margin-right: 15px;
 					}
 					&.open {
 						> a {
-							background: #eeeeee;
-							color: #333333;
+							background: $nav-xs-bg-open-t1;
+							color: $nav-xs-color-open-t1;
 							i {
-								color: #fb4f14;
+								color: $nav-xs-arrow-color-open-t1;
 								&:before {
 									content: "\e253";
 								}
@@ -1096,7 +1093,7 @@ i.menu-indicator {
 					width: 85%;
 				}
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t2 !important;
 				}
 				> li.open {
 					border-bottom: none !important;
@@ -1114,13 +1111,13 @@ i.menu-indicator {
 			&.tier3 {
 				height: auto !important;
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t3 !important;
 				}
 			}
 			&.tier4 {
-				border-left: 3px solid #FB4F14;
+				border-left: 3px solid $nav-xs-border-left-color-t4;
 				> li {
-					border-bottom: 1px solid #eee !important;
+					border-bottom: 1px solid $nav-xs-border-bottom-color-t4 !important;
 				}
 			}
 		}
@@ -1217,10 +1214,10 @@ i.menu-indicator {
 							border-bottom: none;
 						}
 						&.open {
-							background: #fb4f14;
-							color: #ffffff;
+							background: $nav-subLinks-hover-bg;
+							color: $nav-subLinks-hover-color;
 							> a {
-								color: #ffffff;
+								color: $nav-subLinks-hover-color;
 							}
 						}
 					}
@@ -1228,24 +1225,18 @@ i.menu-indicator {
 						color: $top-link-hover;
 					}
 					li.subLinks:hover {
-						/*
-						Siamak : Should call variable for colors
-						background-color: $nav-subLinks-hover-bg;
-						color: $nav-subLinks-hover-color;*/
-						color: #fb4f14;
+						color: $top-link-hover;
 					}
 					li.subLinks > a:hover {
-						/*
-						Siamak : Variable
-						color: $nav-subLinks-hover-color;*/
-						color: #fb4f14;
+						color: $top-link-hover;
 					}
 					li.open > a:hover {
-						color: #ffffff;
-					}
-					li.open ul.tier2 li.open ul.tier3 {
 						color: $nav-subLinks-hover-color;
 					}
+					//Siamak comment this
+					/*li.open ul.tier2 li.open ul.tier3 {
+						color: $nav-subLinks-hover-color;
+					}*/
 					> li {
 						display: inline-block;
 						float: left;
@@ -1272,7 +1263,7 @@ i.menu-indicator {
 					padding: 0;
 					z-index: 999;
 					width: 280px;
-					background: #fff;
+					background: $nav-bg-t2;
 					-webkit-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
 					-moz-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
 					box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
@@ -1301,16 +1292,15 @@ i.menu-indicator {
 						&.subLinks {
 							position: initial;
 							&:hover {
-								background: #fff;
+								//Siamak
+								//background: $nav-bg-t2;
 							}
 						}
 					}
 					> li {
 						display: block;
-						background: #fff;
-						i.menu-indicator {
-							color: #007db8;
-						}
+						//Siamak
+						//background: #fff;
 					}
 					span {
 						width: 92%;
@@ -1320,6 +1310,7 @@ i.menu-indicator {
 						left: 280px;
 						top: 0;
 						width: 280px;
+						//Siamak
 						background: #fff;
 						padding: 0;
 						li {
@@ -1341,6 +1332,7 @@ i.menu-indicator {
 						position: absolute;
 						left: 279px;
 						top: 0;
+
 						background: #fff;
 						padding: 0;
 					}
@@ -1398,13 +1390,13 @@ i.menu-indicator {
 				li {
 					&:hover {
 						background: #fff;
-						color: #fb4f14;
+						color: $top-link-hover;
 					}
 				}
 			}
 		}
 		a {
-			color: #333333;
+			color: $top-link;
 		}
 		ul.tier1 {
 			> li:hover {
