Checking the different b/w Quest and DSG style sheets
Change-Id: I92d09bfdec68564b00b024b82cba630787b33c5d

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -268,7 +268,7 @@ $flyout-xs-border-color: $dell-blue;
 
 $country-selector-border-top-color: #aaa;
 $country-popup-bg-color: $white;
-$country-popup-link-color: #0085c3;
+$country-popup-link-color: $dell-blue;
 $country-popup-link-active-color: $white;
 $country-popup-link-active-bg-color: #0085c3;
 
@@ -360,7 +360,7 @@ $ms-drop-border-color: #ccc;
 $ms-drop--hover-bg: #cce5f1;
 $ms-drop-label-color: #007db8;
 
-$ms-search-input-bg-color: #aaa;
+$ms-search-input-bg-color: #fff;
 $ms-search-input-border-color: #aaa;
 
 //** Background color for textual input addons
