Checking the different b/w Quest and DSG style sheets - 2
Change-Id: I52356ae4ee44c62cedc1f0f3cc0513d4bd10e971

--- a/static/bootstrap/custom/_custom.scss
+++ b/static/bootstrap/custom/_custom.scss
@@ -20,6 +20,9 @@
 	color: $link-color;
 }
 
+.bg-white {
+  background-color: #fff;
+}
 
 a[class^="icon-"]:hover, a[class^="icon-"]:focus {
   text-decoration: none;
