Checking the different b/w Quest and DSG style sheets - 3
Change-Id: Ic4903a4e6852e647dcc29840e2b3c25d5a179e93

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -270,7 +270,7 @@ $country-selector-border-top-color: #aaa;
 $country-popup-bg-color: $white;
 $country-popup-link-color: $dell-blue;
 $country-popup-link-active-color: $white;
-$country-popup-link-active-bg-color: #0085c3;
+$country-popup-link-active-bg-color: $dell-blue;
 
 //== Custom background colors
 
