Fixed color against production
Change-Id: If56c158983aeb1f04f608e100a5090c712f179bf

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -268,7 +268,7 @@ $flyout-xs-border-color: $dell-blue;
 
 $country-selector-border-top-color: #aaa;
 $country-popup-bg-color: $white;
-$country-popup-link-color: $dell-blue;
+$country-popup-link-color: $link-color;
 $country-popup-link-active-color: $white;
 $country-popup-link-active-bg-color: $dell-blue;
 
