--- a/static/bootstrap/widgets/_introduction-with-grey-box.scss
+++ b/static/bootstrap/widgets/_introduction-with-grey-box.scss
@@ -41,3 +41,23 @@
     width: 86%;
   }
 }
+
+@media (min-width: $screen-sm-min) {
+	.grey-box-sm {
+		background-color: #eee;
+		padding: 20px;
+		display: inline-block;
+		h3 {
+			font-family: 'Museo Sans 700', 'Trebuchet MS', Arial;
+			font-weight: 400;
+			margin: 0;
+		}
+		p {
+			font-family: 'Museo Sans 300', 'Trebuchet MS', Arial;
+			font-size: 16px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
