Updated Default btn style only for Quest.
Updates:

[Edward]: removed hard coded media query width and using a variable instead.

Change-Id: I27c67d83b2644f9f2ac807ed79d79a3ffd8cc6f8
Reference: https://app.frontify.com/screen/983410

--- a/static/bootstrap/custom/_buttons.scss
+++ b/static/bootstrap/custom/_buttons.scss
@@ -91,7 +91,11 @@
 // --------------------------------------------------
 
 .btn-default {
-	@include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+  @if ($domain == "quest") {
+    @include button-variant-v2($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
+  } @else {
+    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+  }
 }
 
 .btn-primary {
