Updated Default btn style only for Quest.
Change-Id: I27c67d83b2644f9f2ac807ed79d79a3ffd8cc6f8
Reference: https://app.frontify.com/screen/983410

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -19,6 +19,14 @@ i.nav-arrow:before {
 	margin: -10px auto 0;
 }*/
 
+.openNav {
+	a {
+		.navbar-toggle {
+			color: $top-link-hover !important;
+		}
+	}
+}
+
 .masthead {
 	margin-bottom: 10px;
 	.navbar {
@@ -351,9 +359,6 @@ i.menu-indicator {
 		border: 0;
 		color: $top-user-dropdown-color;
 		padding: 10px 3px 5px;
-		.lnk-create-account {
-			background: $top-user-create-acc-bg;
-		}
 		h5 {
 			margin: 10px 0;
 			a {
