Updated: accordion text color on Quest only
Change-Id: I8229cfc0add78313bad710983160704def355393
Reference:  https://app.frontify.com/screen/983544

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -997,7 +997,7 @@ $panel-danger-border: $state-danger-border !default;
 $panel-danger-heading-bg: $state-danger-bg !default;
 
 $panel-group-collapsible-border-color: $dell-gray;
-$panel-group-heading-text-color: $dell-blue;
+$panel-group-heading-text-color: $link-color;
 
 // Events
 $event-detail-border-color: #ccc;
