--- a/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
+++ b/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
@@ -6,21 +6,26 @@
 	border: 1px solid $affix-border-color;
   font-size: 14px;
   ul {
-    background: linear-gradient(white, #efefef) repeat scroll 0 0 rgba(0, 0, 0, 0);
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 8%, #efefef 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(8%, #ffffff), color-stop(100%, #efefef));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #ffffff 8%, #efefef 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #ffffff 8%, #efefef 100%);
-    /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #ffffff 8%, #efefef 100%);
-    /* IE10+ */
-    background: linear-gradient(to bottom, #ffffff 8%, #efefef 100%);
-    /* W3C */
-    /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#efefef', GradientType=0);*/
+		@if ($domain == "quest") {
+			background: $affix-bg-color;
+
+		} @else {
+			background: linear-gradient(white, #efefef) repeat scroll 0 0 rgba(0, 0, 0, 0);
+			/* Old browsers */
+			background: -moz-linear-gradient(top, #ffffff 8%, #efefef 100%);
+			/* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(8%, #ffffff), color-stop(100%, #efefef));
+			/* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top, #ffffff 8%, #efefef 100%);
+			/* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top, #ffffff 8%, #efefef 100%);
+			/* Opera 11.10+ */
+			background: -ms-linear-gradient(top, #ffffff 8%, #efefef 100%);
+			/* IE10+ */
+			background: linear-gradient(to bottom, #ffffff 8%, #efefef 100%);
+			/* W3C */
+			/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#efefef', GradientType=0);*/
+		}
     li {
       padding: 0;
       float: left;
