--- a/static/bootstrap/custom/_custom-header-footer-top.scss
+++ b/static/bootstrap/custom/_custom-header-footer-top.scss
@@ -518,7 +518,7 @@ li {
 }
 
 i.menu-indicator {
-  font-family: icon-ui;
+	font-family: "icon-ui";
   font-size: 12px;
   font-style: normal;
   font-weight: normal;
