--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -335,7 +335,7 @@ li {
 }
 
 i.menu-indicator {
-	font-family: icon-ui;
+	font-family: "icon-ui";
 	font-size: 11px;
 	font-style: normal;
 	font-weight: normal;
