--- a/static/bootstrap/custom/_custom-header-footer-top-quest.scss
+++ b/static/bootstrap/custom/_custom-header-footer-top-quest.scss
@@ -566,7 +566,7 @@ li {
 }
 
 i.menu-indicator {
-	font-family: icon-ui;
+	font-family: "icon-ui";
 	font-size: 12px;
 	font-style: normal;
 	font-weight: normal;
