--- a/static/bootstrap/custom/_font-face.scss
+++ b/static/bootstrap/custom/_font-face.scss
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'museo-sans-for-dell-100';
+	font-family: "museo-sans-for-dell-100";
   src: url('/fonts/museosansfordell-100-webfont.eot?#iefix') format('embedded-opentype'), url('/fonts/museosansfordell-100-webfont.woff') format('woff'), url('/fonts/museosansfordell-100-webfont.ttf') format('truetype'), url('/fonts/museosansfordell-100-webfont.svg#MuseoSansForDell100') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'museo-sans-for-dell-300';
+	font-family: "museo-sans-for-dell-300";
   src: url('/fonts/museosansfordell-300-webfont.eot');
   src: url('/fonts/museosansfordell-300-webfont.eot?#iefix') format('embedded-opentype'), url('/fonts/museosansfordell-300-webfont.woff') format('woff'), url('/fonts/museosansfordell-300-webfont.ttf') format('truetype'), url('/fonts/museosansfordell-300-webfont.svg#MuseoSansForDell300') format('svg');
   font-weight: normal;
@@ -14,7 +14,7 @@
 }
 
 @font-face {
-  font-family: 'museo-sans-for-dell-700';
+	font-family: "museo-sans-for-dell-700";
   src: url("/fonts/museosansfordell-700-webfont.eot");
   src: url("/fonts/museosansfordell-700-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/museosansfordell-700-webfont.woff") format("woff"), url("/fonts/museosansfordell-700-webfont.ttf") format("truetype"), url("/fonts/museosansfordell-700-webfont.svg#MuseoSansForDell700") format("svg");
   font-weight: normal;
@@ -22,7 +22,7 @@
 }
 
 @font-face {
-  font-family: 'icon-ui';
+	font-family: "icon-ui";
   src: url('/fonts/icon-ui.eot');
   src: url('/fonts/icon-ui.eot?#iefix') format('embedded-opentype'), url('/fonts/icon-ui.woff') format('woff'), url('/fonts/icon-ui.ttf') format('truetype'), url('/fonts/icon-ui.svg#icon-ui') format('svg');
   font-weight: normal;
@@ -30,7 +30,7 @@
 }
 
 @font-face {
-  font-family: 'icon-small';
+	font-family: "icon-small";
   src: url('/fonts/icon-small.eot');
   src: url('/fonts/icon-small.eot?#iefix') format('embedded-opentype'), url('/fonts/icon-small.woff') format('woff'), url('/fonts/icon-small.ttf') format('truetype'), url('/fonts/icon-small.svg#icon-small') format('svg');
   font-weight: normal;
@@ -38,7 +38,7 @@
 }
 
 @font-face {
-  font-family: 'icon-large';
+	font-family: "icon-large";
   src: url('/fonts/icon-large.eot');
   src: url('/fonts/icon-large.eot?#iefix') format('embedded-opentype'), url('/fonts/icon-large.woff') format('woff'), url('/fonts/icon-large.ttf') format('truetype'), url('/fonts/icon-large.svg#icon-large') format('svg');
   font-weight: normal;
@@ -46,6 +46,6 @@
 }
 
 @font-face {
-  font-family: 'Glyphicons Halflings';
+	font-family: "Glyphicons Halflings";
   src: url("/fonts/glyphicons-halflings-regular.eot");
   src: url("/fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/glyphicons-halflings-regular.woff2") format("woff2"), url("/fonts/glyphicons-halflings-regular.woff") format("woff"), url("/fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
