Updated: _header-footer.scss to change hamburger color when it's activated Reference: https://app.frontify.com/screen/949172
Change-Id: Iacf3316bdec9c04f285dd39d8d85318c4bb1fd45
Updated: add color variable for blockquote for Quest and DSG
Reference: https://app.frontify.com/screen/950963

Updated: _header-footer.scss to change hamburger color when it's activated

Reference: https://app.frontify.com/screen/949172

Updated: add color variable for blockquote for Quest and DSG
Reference: https://app.frontify.com/screen/950963

Updates:

[Siamak]: Now using variable instead of static hex color.

Change-Id: Iacf3316bdec9c04f285dd39d8d85318c4bb1fd45

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -1139,6 +1139,8 @@ $text-muted: $gray-light !default;
 $abbr-border-color: $gray-light !default;
 //** Headings small color
 $headings-small-color: $gray-light !default;
+//** Blockquote color
+$blockquote-color: $text-blue !default;
 //** Blockquote small color
 $blockquote-small-color: $gray-light !default;
 //** Blockquote font size
