--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -1051,6 +1051,8 @@ $text-muted: $gray-light !default;
 $abbr-border-color: $gray-light !default;
 //** Headings small color
 $headings-small-color: $gray-light !default;
+//** Blockquote color
+$blockquote-color: $dell-berry !default;
 //** Blockquote small color
 $blockquote-small-color: $gray-light !default;
 //** Blockquote font size
