--- a/static/bootstrap/custom/_type.scss
+++ b/static/bootstrap/custom/_type.scss
@@ -336,6 +336,7 @@ blockquote {
   font-size: $blockquote-font-size * 0.7142857142857143;
   line-height: 1.2em;
   position: relative;
+  color: $blockquote-color;
 
   //border-left: 5px solid $blockquote-border-color;
 
