--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -8,20 +8,9 @@ i.nav-arrow:before {
 	content: "\e259";
 }
 
-/*
-.masthead-shadow-section {
-	content: "";
-	width: 80%;
-	height: 10px;
-	left: 10%;
-	border-radius: 50%;
-	box-shadow: 0 0 18px rgba(0, 0, 0, 0.5);
-	margin: -10px auto 0;
-}*/
-
 .openNav {
 	a {
-		.navbar-toggle {
+		&.navbar-toggle {
 			color: $top-link-hover !important;
 		}
 	}
