Updated: _header-footer.scss to change hamburger color when it's activated
Reference: https://app.frontify.com/screen/949172

Updated: add color variable for blockquote for Quest and DSG

Reference: https://app.frontify.com/screen/950963

Updates:

[Siamak]: Now using variable instead of static hex color.

[Siamak]: changed style sheet to be more specific on change hamburger color when it's activated

Change-Id: Iacf3316bdec9c04f285dd39d8d85318c4bb1fd45

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -8,21 +8,12 @@ i.nav-arrow:before {
 	content: "\e259";
 }
 
-/*
-.masthead-shadow-section {
-	content: "";
-	width: 80%;
-	height: 10px;
-	left: 10%;
-	border-radius: 50%;
-	box-shadow: 0 0 18px rgba(0, 0, 0, 0.5);
-	margin: -10px auto 0;
-}*/
-
 .openNav {
-	a {
-		.navbar-toggle {
-			color: $top-link-hover !important;
+	.hamburger {
+		a {
+			&.navbar-toggle {
+				color: $top-link-hover !important;
+			}
 		}
 	}
 }
