Updated: Change style of multi-select box, filter-drop-down on Quest only
Reference: https://app.frontify.com/screen/983521

[Siamak]: created a variable for Multi-select box drop-shadow when focus and now using box-shadow() function

Change-Id: I4d63ad0b5aa0fa432bc13cd4d790b2facb159fa2

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -424,11 +424,12 @@ $legend-border-color: #e5e5e5 !default;
 $ms-choice-color: #444;
 $ms-choice-border-color: #ccc;
 $ms-choice-bg-color: $white;
-$ms-choice-focus-border-color: #007db8;
+$ms-choice-focus-border-color: #016A9C;
+$ms-choice-focus-shadow-color: rgba(1, 106, 156, 0.6);
 $ms-choice-disabled-bg-color: #f4f4f4;
 $ms-choice-disabled-border-color: #ddd;
 $ms-choice-span-color: #555;
-$ms-choice-placeholder-color: #555;
+$ms-choice-placeholder-color: #333333;
 $ms-choice-xs-span-color: #007db8;
 $ms-choice-xs-placeholder-color: #007db8;
 $ms-choice-xs-placeholder-hover-color: #00496c;
@@ -436,8 +437,8 @@ $ms-choice-xs-placeholder-hover-color: #00496c;
 $ms-drop-bg-color: $white;
 $ms-drop-text-color: #000;
 $ms-drop-border-color: #ccc;
-$ms-drop--hover-bg: #cce5f1;
-$ms-drop-label-color: #007db8;
+$ms-drop-hover-bg: #eeeeee;
+$ms-drop-label-color: $link-color;
 
 $ms-search-input-bg-color: #aaa;
 $ms-search-input-border-color: #aaa;
