Updated: Change style of multi-select box, filter-drop-down on Quest only Reference: https://app.frontify.com/screen/983521
[Siamak]: rename variableu $ms-drop--hover-bg to $ms-drop-hover-bg

Change-Id: I4d63ad0b5aa0fa432bc13cd4d790b2facb159fa2

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -358,7 +358,7 @@ $ms-choice-xs-placeholder-hover-color: #00496c;
 $ms-drop-bg-color: $white;
 $ms-drop-text-color: #000;
 $ms-drop-border-color: #ccc;
-$ms-drop--hover-bg: #cce5f1;
+$ms-drop-hover-bg: #cce5f1;
 $ms-drop-label-color: #007db8;
 
 $ms-search-input-bg-color: #fff;
