--- a/static/bootstrap/custom/_dropdowns.scss
+++ b/static/bootstrap/custom/_dropdowns.scss
@@ -289,3 +289,17 @@
   }
 }
 
+//Only on Quest - Changing dropdown arrows to down and up accordingly
+@if ($domain == "quest") {
+	.open {
+		.dropdown-toggle {
+			.caret {
+				border-bottom: 6px solid;
+				border-right: 6px solid transparent;
+				border-left: 6px solid transparent;
+				border-top: none;
+			}
+		}
+	}
+}
+
