--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -474,11 +474,11 @@ $dropdown-divider-bg: #e5e5e5 !default;
 
 
 //** Dropdown link text color.
-$dropdown-link-color: $gray-dark !default;
+$dropdown-link-color: #333333 !default;
 //** Hover color for dropdown links.
 $dropdown-link-hover-color: darken($gray-dark, 5%) !default;
 //** Hover background for dropdown links.
-$dropdown-link-hover-bg: #cce5f1 !default; //#f5f5f5 !default;
+$dropdown-link-hover-bg: #eeeeee !default; //#f5f5f5 !default;
 
 //** Active dropdown menu item text color.
 $dropdown-link-active-color: $component-active-color !default;
