Updated: change event detail calender header bg color and font size Reference: https://app.frontify.com/screen/973832
Change-Id: Iaa5af88f9b814fc2926e53d256ac087c804279e6

--- a/static/bootstrap/widgets/_date.scss
+++ b/static/bootstrap/widgets/_date.scss
@@ -54,7 +54,12 @@
 
   .header {
 		color: $date-widget-header-color;
-    font-size: $font-size-base;
+
+    @if ($domain == "quest") {
+      font-size: 14px;
+    } @else {
+      font-size: $font-size-base;
+    }
   }
 
   &.event-on-demand {
