Updated: change event detail calender header bg color and font size Reference: https://app.frontify.com/screen/973832
Change-Id: Iaa5af88f9b814fc2926e53d256ac087c804279e6

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -1003,9 +1003,9 @@ $panel-group-heading-text-color: $link-color;
 
 // Events
 $event-detail-border-color: #ccc;
-$event-on-demand-header-bg: $dell-orange;
-$event-in-person-header-bg: $dell-purple;
-$event-online-header-bg: $dell-green;
+$event-on-demand-header-bg: #C44E26;
+$event-in-person-header-bg: #614F83;
+$event-online-header-bg: #3E831C;
 $event-detail-signed-off-border-color: #cbcbcb;
 $event-container-off-canvas-bg-color: $white;
 
