Updated: change h2 text color on home page banner Quest only Reference: https://app.frontify.com/screen/971631
Change-Id: Ibf96bba31cfd3ef4641006b6272c55de3d3b6721

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -43,6 +43,8 @@ $dell-teal: #42aeaf;
 $color-heading-links-hover: #007db8;
 $color-image-border: #737373;
 
+$text-blue: $dell-blue;
+
 /* DemandBase Colors */
 
 $color-demandbase-dropdown-background: #c0c0c0;
