Changed text-blue color to Quest blue on Quest. Also, change variable for text-dark-blue class
Reference: https://app.frontify.com/screen/983540

Test URL: http://www-quest-com/solutions/endpoint-systems-management/

Change-Id: I86ef6a472569a66c9117505183b73738dfbd0a3e

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -31,6 +31,7 @@ $dell-teal: #42aeaf;
 
 /*Quest Colors*/
 $text-blue: #003876;
+$text-dark-blue: $text-blue; //same as text-blue, we don't have dark blue for Quest
 $text-orange: #FB4F14;
 $darker-gray: #333333;
 $dark-gray: #444444;
