--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -44,6 +44,7 @@ $color-heading-links-hover: #007db8;
 $color-image-border: #737373;
 
 $text-blue: $dell-blue;
+$text-dark-blue: $dell-dark-blue;
 
 /* DemandBase Colors */
 
