--- a/static/bootstrap/custom/_text.scss
+++ b/static/bootstrap/custom/_text.scss
@@ -2,7 +2,7 @@
   color: $text-blue;
 }
 .text-dark-blue {
-  color: $dell-dark-blue;
+  color: $text-dark-blue;
 }
 .text-light-green {
   color: $dell-light-green;
