Changed Carousel Rotator color to link color on Quest only
Reference: https://app.frontify.com/screen/973861

Test URL: http://www-quest-com/solutions/endpoint-systems-management/

Change-Id: Ib38b5b0dc0dd336831cfcb49ceea9e6ae77a2e58

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -1160,7 +1160,7 @@ $hr-border: $gray-lighter !default;
 $slick-dots: $natural-gray;
 $slick-dots-active: $text-orange;
 $slick-list-loading-bg: #fff;
-$slick-arrow-color: $dell-blue;
+$slick-arrow-color: $link-color;
 $slick-arrow-disabled-color: #444;
 $slick-1170-caption-bg: #f5f5f5;
 $slick-1170-caption-color: #007db8;
