rearranging scss partials to segement partials only used for particular domain.
Change-Id: Ic081ef375479b50e3be89dfe82322e7f7952c623

--- a/static/bootstrap/custom/quest/_custom-header-footer-quest-v1.scss
+++ b/static/bootstrap/custom/quest/_custom-header-footer-quest-v1.scss
@@ -2,7 +2,7 @@
 @import 'custom-header-footer-top-quest';
 
 &.is-responsive {
-	@import 'custom-header-footer-responsive';
+	@import '../dsg/custom-header-footer-responsive';
 }
 
 &.not-responsive {
