Changed icons on flyout button, they are Bootstrap Glyphicons now on Quest only
Reference: https://app.frontify.com/screen/976931

Test URL:
http://www-quest-com/solutions/data-protection/
http://www-quest-com/products/active-roles/

Change-Id: I86a25914d1c67ddebca3981439496f64d0ad1cb8

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -328,15 +328,15 @@ $btn-default-disable-color: $dell-gray;
 
 /* Start:Flyout */
 $flyout-bg: $white;
-$flyout-btn-bg: $dell-blue;
+$flyout-btn-bg: $link-color;
 $flyout-btn-color: $white;
 $flyout-border-color: #a9a9a9;
-$flyout-border-left-color: $dell-blue;
-$flyout-link-hover-color: $dell-blue;
+$flyout-border-left-color: $link-color;
+$flyout-link-hover-color: $link-color;
 $flyout-close-color: $dell-gray-medium;
 
-$flyout-btn-xs-bg: $dell-blue;
-$flyout-xs-border-color: $dell-blue;
+$flyout-btn-xs-bg: $link-color;
+$flyout-xs-border-color: $link-color;
 /* End:Flyout */
 
 /* Start:Country Dropdown */
