--- a/static/bootstrap/custom/quest/_icons.scss
+++ b/static/bootstrap/custom/quest/_icons.scss
@@ -1,5 +1,3 @@
-/* TODO: Siamak to write why this file is needed. */
-
 [class^="icon-"], [class*=" icon-"], .icon-small-360-hinge, .icon-small-add, .icon-small-alertcomplete, .icon-small-alerterror, .icon-small-alertinfo, .icon-small-alertnotice, .icon-small-audiocard, .icon-small-audiospeaker, .icon-small-award, .icon-small-battery, .icon-small-bell, .icon-small-cables, .icon-small-calculator, .icon-small-calendar, .icon-small-carryingcase, .icon-small-cart, .icon-small-chat, .icon-small-checkmark, .icon-small-chipset, .icon-small-clock, .icon-small-cloud, .icon-small-color, .icon-small-computergeneric, .icon-small-contact, .icon-small-copy, .icon-small-data, .icon-small-deals, .icon-small-detachable, .icon-small-diagnostic, .icon-small-dimensionsweight, .icon-small-display, .icon-small-download, .icon-small-drivers, .icon-small-edit, .icon-small-employee, .icon-small-energyefficient, .icon-small-enterprise, .icon-small-e-value, .icon-small-gift-card, .icon-small-globe, .icon-small-graphics-card, .icon-small-harddrive, .icon-small-help, .icon-small-house, .icon-small-infrastructure, .icon-small-inktoner, .icon-small-keyboard, .icon-small-lightbulb, .icon-small-location, .icon-small-magnifying-glass, .icon-small-mail, .icon-small-memory, .icon-small-memorycardreader, .icon-small-missingimage, .icon-small-mobile, .icon-small-mouse, .icon-small-music, .icon-small-network, .icon-small-notebook, .icon-small-operatingsystem, .icon-small-opticaldrive, .icon-small-package, .icon-small-partners, .icon-small-performance, .icon-small-phone, .icon-small-photos, .icon-small-ports, .icon-small-powersupply, .icon-small-printer, .icon-small-processor, .icon-small-projector, .icon-small-protection, .icon-small-recycle, .icon-small-refresh, .icon-small-rss, .icon-small-save, .icon-small-scale-out, .icon-small-searchleft, .icon-small-secure, .icon-small-securesoftware, .icon-small-server, .icon-small-serverrack, .icon-small-share, .icon-small-shipping, .icon-small-socialnetworking, .icon-small-software, .icon-small-solutions, .icon-small-speakers, .icon-small-star, .icon-small-storage, .icon-small-support, .icon-small-surgeprotection, .icon-small-tablet, .icon-small-thinclient, .icon-small-touch, .icon-small-touch-pad, .icon-small-towergeneric, .icon-small-trash, .icon-small-tv, .icon-small-useraccount, .icon-small-video, .icon-small-videocard, .icon-small-virtualization, .icon-small-warranty, .icon-small-webcam, .icon-small-whitepaper, .icon-small-wireless, .icon-small-zoomin, .icon-small-zoomout {
 	font-family: "icon-small";
 	speak: none;
@@ -13,6 +11,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
 
 [class^="icon-large-"], [class*=" icon-large-"] {
 	font-family: "icon-large";
@@ -213,4 +212,20 @@
 
 .icon-small-alertinfo:before {
 	content: "\e604";
+}
+
+/* To replace flyout button icons with bootstrap icons and avid template changing */
+#button-flyout {
+	.icon-small-mail, .icon-small-contact, .icon-small-edit {
+		font-family: 'Glyphicons Halflings';
+	}
+	.icon-small-edit:before {
+		content: "\e182";
+	}
+	.icon-small-contact:before {
+		content: "\2709";
+	}
+	.icon-small-mail:before {
+		content: "\e041";
+	}
 }
